--- a/2_html/resume.html
+++ b/2_html/resume.html
@@ -5,64 +5,81 @@
 </head>
 <body>
 
-<table>
-	<thead>
-		<tr>
-			<th><h1>HITOMI TANIMURA</h1></th>
-		</tr>
-	</thead>
-
-	<th>avida</th>
-	<tr>
-		<td>
-			<img src="images/cebuana.jpg" width="100px" alt="hitomi">
-		</td>
-	</tr>
-	
-
-</table>
+	<header>
+      <h1>HITOMI TANIMURA</h1>
+    </header>
 
 
+    <table width="80%">
+        <thead>
+            <tr>
+                <td><img src="images/cebuana.jpg" width="150px" alt="hitomi"></td>
+                <td>
+                    <h3>Local Address</h3>
+                    Avida towoer 2 IT park<br>
+                    GDN Square Residential<br>
+                    Unit 0000 1-2-33
+                </td>
+                <td>
+                    <h3>Permanent Adress</h3>
+                    Avida towoer 2 IT park<br>
+                    lnez Villa St, Apas, Cebu City<br>
+                    Unit 0000
+                </td>
+            </tr>
+        </thead>
+      </table>
+    <div>
+		<h2 style="background-color:pink">SUMMARY OF QUALIFICATION</h2>
+			<ul>
+				<li>Bullet one Bullet one</li>
+				<li>Bullet two Bullet two</li>
+			</ul>
+		</div>
+		
+			<h2 style="background-color:pink">WORK EXPERIENCE</h2>
+				<dev>
+					<h3>Job Title One</h3>
+						<em>(campany name, address)</em>
+							<ul>
+								<li>aaaaaaaaaaa</li>
+								<li>aaaaaaaaaaa</li>
+							</ul>
+						</div>
 
+				<dev>
+					<h3>Job Title One</h3>
+						<em>(campany name, address)</em>
+							<ul>
+								<li>aaaaaaaaaaa</li>
+								<li>aaaaaaaaaaa</li>
+							</ul>
+						</dev>
 
-	<h2><p style="background-color:pink">SUMMARY OF QUALIFICATION</p></h2>
-		<ul>
-			<li>aa</li>
-			<li>aa</li>
-			<li>aa</li>
-		</ul>
+	<h2 style="background-color:pink">INTEREST / VOLUNTEER</h2>
+		<dev>
+			<ol>
+				<li><b>Volunteer Job Title</b></li>
+					<em>company namemmmmmmmmmmm</em>
+				   		 			   		 
+				<li><b>Volunteer Job Title</b></li>
+					 <em>company nammmmmmmmmmme</em>			 
+				</ol>
+			</dev>
 
-	<h2><p style="background-color:pink">WORK EXPERIENCE</p></h2>
-		<p>job</p>
-			<p><em>(campany name)</em></p>
-		<ul>
-			<li>aaaaaaaaaaa</li>
-			<li>aaaaaaaaaaa</li>
-		</ul>
-		<p>job</p>
-
-	<p><em>(campany name)</em></p>
+<h2 style="background-color:pink">EDUCATION</h2>
+<dev>
 	<ul>
-			<li>aaaaaaaaaaa</li>
-			<li>aaaaaaaaaaa</li>
+			<li>aaaaaaaaaaaaaaaaaaaaa</li>
+			<li>aaaaaaaaaaaaaaaaaaaaa</li>
 	</ul>
-
-	<h2><p style="background-color:pink">INTEREST / VOLUNTEER</p></h2>
-
-	<ol>
-			<li>job</li>
-			<p><em>company name</em></p>
-
-			<li>job</li>
-			<p><em>company name</em></p>
-	</ol>
-<h2><p style="background-color:pink">EDUCATION</p></h2>
-	<ul>
-			<li>aaaaaaa</li>
-			<li>aaaaaaa</li>
-	</ul>
-
-
-
+</dev>
+<h2 style="background-color:pink">ACADEMIC AWARDS</h2>
+ 	<dev>
+		<ul>
+			<li>aaaaaaaaaaaaaaaaaaaaa</li>
+		</ul>
+	</dev>
+<br>
 </body>
 </html>
