--- a/2_html/resume.html
+++ b/2_html/resume.html
@@ -11,7 +11,7 @@
 
 
     <table width="80%">
-        <thead>
+        <tbody>
             <tr>
                 <td><img src="images/cebuana.jpg" width="150px" alt="hitomi"></td>
                 <td>
@@ -27,7 +27,7 @@
                     Unit 0000
                 </td>
             </tr>
-        </thead>
+        </tbody>
       </table>
     <div>
 		<h2 style="background-color:pink">SUMMARY OF QUALIFICATION</h2>
@@ -38,7 +38,7 @@
 		</div>
 		
 			<h2 style="background-color:pink">WORK EXPERIENCE</h2>
-				<dev>
+				<div>
 					<h3>Job Title One</h3>
 						<em>(campany name, address)</em>
 							<ul>
@@ -47,17 +47,17 @@
 							</ul>
 						</div>
 
-				<dev>
+				<div>
 					<h3>Job Title One</h3>
 						<em>(campany name, address)</em>
 							<ul>
 								<li>aaaaaaaaaaa</li>
 								<li>aaaaaaaaaaa</li>
 							</ul>
-						</dev>
+						</div>
 
 	<h2 style="background-color:pink">INTEREST / VOLUNTEER</h2>
-		<dev>
+		<div>
 			<ol>
 				<li><b>Volunteer Job Title</b></li>
 					<em>company namemmmmmmmmmmm</em>
@@ -65,7 +65,7 @@
 				<li><b>Volunteer Job Title</b></li>
 					 <em>company nammmmmmmmmmme</em>			 
 				</ol>
-			</dev>
+			</div>
 
 <h2 style="background-color:pink">EDUCATION</h2>
 <dev>
@@ -75,11 +75,11 @@
 	</ul>
 </dev>
 <h2 style="background-color:pink">ACADEMIC AWARDS</h2>
- 	<dev>
+ 	<div>
 		<ul>
 			<li>aaaaaaaaaaaaaaaaaaaaa</li>
 		</ul>
-	</dev>
+	</div>
 <br>
 </body>
 </html>
