--- a/2_html/resume.html
+++ b/2_html/resume.html
@@ -31,55 +31,90 @@
       </table>
     <div>
 		<h2 style="background-color:pink">SUMMARY OF QUALIFICATION</h2>
-			<ul>
-				<li>Bullet one Bullet one</li>
-				<li>Bullet two Bullet two</li>
-			</ul>
-		</div>
+		<table width="100%">
+			<tbody>
+				<tr>
+					<td>
+						<ul>
+							<li>Bullet one Bullet one</li>
+							<li>Bullet two Bullet two</li>
+						</ul>
+					</td>
+				 </tr>
+			</tbody>
+		 </table>	
 		
 			<h2 style="background-color:pink">WORK EXPERIENCE</h2>
-				<div>
-					<h3>Job Title One</h3>
-						<em>(campany name, address)</em>
-							<ul>
-								<li>aaaaaaaaaaa</li>
-								<li>aaaaaaaaaaa</li>
-							</ul>
-						</div>
-
-				<div>
-					<h3>Job Title One</h3>
-						<em>(campany name, address)</em>
-							<ul>
-								<li>aaaaaaaaaaa</li>
-								<li>aaaaaaaaaaa</li>
-							</ul>
-						</div>
+				<table width="100%">
+					<tbody>
+						<tr>
+							<td>
+								<h3>Job Title One</h3>
+									<em>(campany name, address)</em>
+										<ul>
+											<li>aaaaaaaaaaa</li>
+											<li>aaaaaaaaaaa</li>
+										</ul>
+									</td>	
+								<tr>
+						</tbody>
+						<tbody>
+							<tr>
+								<td>
+									<h3>Job Title One</h3>
+										<em>(campany name, address)</em>
+											<ul>
+												<li>aaaaaaaaaaa</li>
+												<li>aaaaaaaaaaa</li>
+											</ul>
+										</td>
+									<tr>
+							</tbody>
+		 			</table>
 
 	<h2 style="background-color:pink">INTEREST / VOLUNTEER</h2>
-		<div>
-			<ol>
-				<li><b>Volunteer Job Title</b></li>
-					<em>company namemmmmmmmmmmm</em>
+	<table width="100%">
+				<tbody>
+					<tr>
+						<td>
+							<ol>
+								<li><b>Volunteer Job Title</b></li>
+								<em>company namemmmmmmmmmmm</em>
 				   		 			   		 
-				<li><b>Volunteer Job Title</b></li>
-					 <em>company nammmmmmmmmmme</em>			 
-				</ol>
-			</div>
+									<li><b>Volunteer Job Title</b></li>
+					 			<em>company nammmmmmmmmmme</em>	
+							</ol>
+						</td>
+					 <tr>
+				</tbody>
+			 </table>		
 
 <h2 style="background-color:pink">EDUCATION</h2>
-<dev>
-	<ul>
-			<li>aaaaaaaaaaaaaaaaaaaaa</li>
-			<li>aaaaaaaaaaaaaaaaaaaaa</li>
-	</ul>
-</dev>
+	<table width="100%">
+				<tbody>
+					<tr>
+						<td>
+							<ul>
+								<li>aaaaaaaaaaaaaaaaaaaaa</li>
+								<li>aaaaaaaaaaaaaaaaaaaaa</li>
+							</ul>
+						</td>
+					 <tr>
+				</tbody>
+			 </table>
+
 <h2 style="background-color:pink">ACADEMIC AWARDS</h2>
- 	<div>
-		<ul>
-			<li>aaaaaaaaaaaaaaaaaaaaa</li>
-		</ul>
-	</div>
-<br>
+ 	<table width="100%">
+				<tbody>
+					<tr>
+						<td>
+							<ul>
+								<li>aaaaaaaaaaaaaaaaaaaaa</li>
+							</ul>
+						</td>
+					 <tr>
+				</tbody>
+		 </table>
+<marquee discription="right">HITOMI</marquee>
 </body>
 </html>
