--- a/2_html/resume.html
+++ b/2_html/resume.html
@@ -31,7 +31,7 @@
       </table>
     <div>
 		<h2 style="background-color:pink">SUMMARY OF QUALIFICATION</h2>
-		<table width="100%">
+		<table>
 			<tbody>
 				<tr>
 					<td>
@@ -45,35 +45,49 @@
 		 </table>	
 		
 			<h2 style="background-color:pink">WORK EXPERIENCE</h2>
-				<table width="100%">
-					<tbody>
-						<tr>
-							<td>
-								<h3>Job Title One</h3>
-									<em>(campany name, address)</em>
-										<ul>
-											<li>aaaaaaaaaaa</li>
-											<li>aaaaaaaaaaa</li>
-										</ul>
-									</td>	
-								<tr>
-						</tbody>
+					<table width="100%">
 						<tbody>
-							<tr>
-								<td>
-									<h3>Job Title One</h3>
-										<em>(campany name, address)</em>
+								<tr>
+									<td><h3>NANOHANAEN</h3></td>
+									<td align="right">Start End Year</td>	
+								</tr>
+
+								<tr>
+									<td><em>(campany name, address)</em></td>
+								</tr>
+									<tr>
+										<td>
 											<ul>
 												<li>aaaaaaaaaaa</li>
 												<li>aaaaaaaaaaa</li>
 											</ul>
-										</td>
-									<tr>
+										</td>	
+									</tr>
 							</tbody>
-		 			</table>
+						</table>
+			<table width="100%">
+						<tbody>
+								<tr>
+									<td><h3>KUWAGAI</h3></td>
+									<td align="right">Start End Year</td>	
+								</tr>
+
+								<tr>
+									<td><em>(campany name, address)</em></td>
+								</tr>
+									<tr>
+										<td>
+											<ul>
+												<li>aaaaaaaaaaa</li>
+												<li>aaaaaaaaaaa</li>
+											</ul>
+										</td>	
+									</tr>
+							</tbody>
+						</table>
 
 	<h2 style="background-color:pink">INTEREST / VOLUNTEER</h2>
-	<table width="100%">
+	<table>
 				<tbody>
 					<tr>
 						<td>
@@ -90,7 +104,7 @@
 			 </table>		
 
 <h2 style="background-color:pink">EDUCATION</h2>
-	<table width="100%">
+	<table>
 				<tbody>
 					<tr>
 						<td>
@@ -104,7 +118,7 @@
 			 </table>
 
 <h2 style="background-color:pink">ACADEMIC AWARDS</h2>
- 	<table width="100%">
+ 	<table>
 				<tbody>
 					<tr>
 						<td>
