--- a/2_html/resume.html
+++ b/2_html/resume.html
@@ -53,10 +53,11 @@
 								</tr>
 
 								<tr>
-									<td><em>(campany name, address)</em></td>
+									<td colspan="2"><em>(campany name, address)</em></td>
+
 								</tr>
 									<tr>
-										<td>
+										<td colspan="2">
 											<ul>
 												<li>aaaaaaaaaaa</li>
 												<li>aaaaaaaaaaa</li>
@@ -73,10 +74,10 @@
 								</tr>
 
 								<tr>
-									<td><em>(campany name, address)</em></td>
+									<td colspan="2"><em>(campany name, address)</em></td>
 								</tr>
 									<tr>
-										<td>
+										<td colspan="2">
 											<ul>
 												<li>aaaaaaaaaaa</li>
 												<li>aaaaaaaaaaa</li>
