--- a/3_css/bootstrap.html
+++ b/3_css/bootstrap.html
@@ -79,6 +79,7 @@
   </div>
 </nav>
 <!-- ----------------------------------------------- -->
+
 <section>
   <div class="jumbotron">
   <h1 class="display-7">-about me-</h1>
@@ -87,19 +88,30 @@
 </div>
 </section>
 
-<section>
--INTEREST-  
+<!-- ----------------------------------------------- -->
+
+
+<section>  
 <div class="container">
   <div class="row">
+
     <div class="col-sm">
-      One of three columns
+      <div class="container">
+        <img src="images/lake2.jpg" class="d-block w-100" alt="..."> 
+      </div>
     </div>
+    
     <div class="col-sm">
-      One of three columns
+      <div class="container">
+        <img src="images/lake2.jpg" class="d-block w-100" alt="...">
+      </div>
     </div>
-    <div class="col-sm">
-      One of three columns
+  <div class="col-sm">
+      <div class="container">
+        <img src="images/lake2.jpg" class="d-block w-100" alt="...">   
+      </div>
     </div>
+    
   </div>
 </div>
 
