--- a/3_css/bootstrap.html
+++ b/3_css/bootstrap.html
@@ -24,7 +24,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/woman.jpg" class="d-block w-100" alt="...">
+      <img src="images/bear.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>HITOMI</h5>
           <p>TANIMURA</p>
@@ -78,50 +78,164 @@
     </ul>
   </div>
 </nav>
+<br>
 <!-- ----------------------------------------------- -->
 
 <section>
   <div class="jumbotron">
-  <h1 class="display-7">-about me-</h1>
-  <p class="lead"><b><i>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</i></b></p>
-  
+  <h2><p class="text-center">-about me-</p></h2>
+  <p class="lead text-center"><b><i>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</i></b></p>
+
 </div>
 </section>
+
+<br>
 
 <!-- ----------------------------------------------- -->
 
 
-<section>  
+<section>
+  <h2 class="text-center">-INTERESTS-</h2>
 <div class="container">
   <div class="row">
 
     <div class="col-sm">
-      <div class="container">
-        <img src="images/lake2.jpg" class="d-block w-100" alt="..."> 
-      </div>
+        <img src="images/bear.jpg" class="d-block w-100" alt="...">
+        <h3 class="text-center">HITOMI</h3>
+        <p class="text-center">All your dreams can come true if you have the courage to pursue them.
+          All your dreams can come true if you have the courage to pursue them.</p>
     </div>
-    
+
     <div class="col-sm">
-      <div class="container">
-        <img src="images/lake2.jpg" class="d-block w-100" alt="...">
-      </div>
+        <img src="images/bear.jpg" class="d-block w-100" alt="...">
+        <h3 class="text-center">HITOMI</h3>
+        <p class="text-center">All your dreams can come true if you have the courage to pursue them.
+          All your dreams can come true if you have the courage to pursue them.</p>
     </div>
+
   <div class="col-sm">
-      <div class="container">
-        <img src="images/lake2.jpg" class="d-block w-100" alt="...">   
-      </div>
+        <img src="images/bear.jpg" class="d-block w-100" alt="...">
+        <h3 class="text-center">HITOMI</h3>
+        <p class="text-center">All your dreams can come true if you have the courage to pursue them.
+          All your dreams can come true if you have the courage to pursue them.</p>
     </div>
-    
+
   </div>
 </div>
-
+<br>
+<br>
 </section>
 
+<!-- ここまで　-->
+
+<section>
+  <h2 class="text-center">-INTERESTS-</h2>
+<div class="container">
+  <div class="row">
+
+    <div class="col-sm">
+        <img src="images/lake2.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+    <div class="col-sm">
+        <img src="images/bear.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+  <div class="col-sm">
+        <img src="images/lake2.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+    <div class="col-sm">
+        <img src="images/bear.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+    <div class="col-sm">
+        <img src="images/lake2.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+    <div class="col-sm">
+      <img src="images/bear.jpg" class="img-thumbnail img-responsive">
+  </div>
+
+  </div>
+</div>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+        <img src="images/bear.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+    <div class="col-sm">
+        <img src="images/lake2.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+  <div class="col-sm">
+        <img src="images/bear.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+    <div class="col-sm">
+        <img src="images/lake2.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+    <div class="col-sm">
+        <img src="images/bear.jpg" class="img-thumbnail img-responsive">
+    </div>
+
+    <div class="col-sm">
+      <img src="images/lake2.jpg"  class="img-thumbnail img-responsive">
+  </div>
+
+  </div>
+</div>
+</section>
+<br>
+<br>
+<!-- コンタクト -->
 
 
 
+<section>
+
+  <h2 class="text-center">-CONTACT-</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <img src="images/lake.jpg" class="w-100">
+      </div>
+      <div class="col-6 bg-light">
+                <form>
+                  <div class="form-group">
+                    <label for="validationCustom01">name</label>
+                    <input type="email" class="form-control" id="validationCustom01" placeholder="name">
+                    <small class="text-muted"></small>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="text"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">send</button>
+                </form>
+            </div>
+          </div>
+        </div>
+</section>
+<br>
+
+<footer>
 
 
+  <div class="alert alert-primary text-center" role="alert">
+    kapoy ko.
+  </div>
+
+
+</footer>
+
+
+
+</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
