--- a/4_jquery/jquery-firstactivity.html
+++ b/4_jquery/jquery-firstactivity.html
@@ -24,6 +24,7 @@
 
 	<script type="text/javascript">
 
+    		$( document ).ready(function() {
     		$(function(){
     		$('.hidden').hide();
     		$('#hidden').hide();
