--- a/4_jquery/jquery_exercise2.html
+++ b/4_jquery/jquery_exercise2.html
@@ -12,8 +12,10 @@
 
 
 	<script type="text/javascript">
+    $( document ).ready(function() {
     var name = prompt("What's your name?");
     $('#namediv').html("Hey" + " " + name + "! " + "Welcome to mypage");
+    });
 	</script>
 </body>
 </html>
