--- a/4_jquery/jquery_exercise3.html
+++ b/4_jquery/jquery_exercise3.html
@@ -26,7 +26,7 @@
     <a href="#" class="btn">BUTTON</a>
 
 	<script type="text/javascript">
-		$(function(){
+		$( document ).ready(function(){
 	    	$('.btn').click(function(){
 	    	$('.bgcolor').css('background-color','#4169e1');
 	       	});
